versioned_docs/version-2026.1.1/professor/josiane_paula_maltauro.mdx
---
sidebar_label: 'Josiane Paula Maltauro'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Josiane Paula Maltauro",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Cultura e Cinema Nacional I - 831",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "AGO2026B"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Cultura e Cinema Nacional III - 1193",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "AGO2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Cultura e Cinema Nacional I - 831",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "AGO2026A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Cultura e Cinema Nacional II - 1192",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "AGO2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Artes I - 2575",
          "size": 1,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "MEC2026"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Arte I - 1235",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "espaco_de_artes",
          "students": [
            "IIW2025A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Arte I - 2533",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_01_-_cr_toledo",
          "students": [
            "IIW2025B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "ARTES II (489)",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Josiane Paula Maltauro

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

